--- a/5-section/app/public/index.html
+++ b/5-section/app/public/index.html
@@ -6,10 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testing</title>
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
-    <h3>Welcome to testing</h3>
+    <div id="root"></div>
 </body>
+<script type="text/babel" src="index.js"></script>
 
 </html>
