--- a/5-section/app/public/index.html
+++ b/5-section/app/public/index.html
@@ -8,6 +8,7 @@
     <title>Testing</title>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src='https://unpkg.com/react-router-dom@5.0.0/umd/react-router-dom.min.js'></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <link href="style.css" rel="stylesheet">
 </head>
